@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model

class VehicleFleetManager {

}

class VehicleCheckup{
    dateOfCheckup
    kmOfCheckup
}

class Manager {
    section
}

class Vehicle {
    plateNumber
    brand
    model
    type
    tare
    grossWeight
    currentKm
    registerDate
    acquisitionDate
    maintenanceFrequency
}

Manager "1" -- "*" Vehicle: creates/manages >
Manager "1" --up "1" VehicleFleetManager: is a >
Vehicle "1" -- "1" VehicleCheckup: is submitted to >


@enduml